deploy/k8s/infrastructure/redisinsight/test-eu/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
spec:
  template:
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: default-pool
